--- a/AboutLuffy.html
+++ b/AboutLuffy.html
@@ -19,14 +19,14 @@
         <div class="logo"><img src="./assets/OnePieceLogo.png" alt="One Piece Logo" /></div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="AboutLuffy.html">Luffy</a></li>
+            <li><a href="AboutLuffy.html" class="active">Luffy</a></li>
             <li><a href="AboutCrew.html">Crew</a></li>
             <li><a href="AboutDevilsFruits.html">Devils Fruits</a></li>
             <li><a href="MyJourney.html">MyJourney</a></li>
         </ul>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Ronald</div>
+        <div class="logo"><img src="./assets/OnePieceLogo.png" alt="One Piece Logo" /></div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
