--- a/MyJourney.html
+++ b/MyJourney.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="pages-common.css" />
     <link rel="stylesheet" href="MyJourney.css" />
-    <link rel="stylesheet" href="MyJourneyMediaQuaries.css" />
     <link rel="stylesheet" href="footer-styles.css" />
+    <link rel="stylesheet" href="MyJourneyMediaQuaries.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 
@@ -22,7 +22,7 @@
             <li><a href="AboutLuffy.html">Luffy</a></li>
             <li><a href="AboutCrew.html">Crew</a></li>
             <li><a href="AboutDevilsFruits.html">Devils Fruits</a></li>
-            <li><a href="MyJourney.html">MyJourney</a></li>
+            <li><a href="MyJourney.html" class="active">MyJourney</a></li>
         </ul>
     </nav>
     <nav id="hamburger-nav">
