--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="logo"><img src="./assets/OnePieceLogo.png" alt="One Piece Logo" /></div>
     <div style="display: flex; align-items: center; gap: 2rem;">
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="AboutLuffy.html">Luffy</a></li>
         <li><a href="AboutCrew.html">Crew</a></li>
         <li><a href="AboutDevilsFruits.html">Devils Fruits</a></li>
@@ -29,7 +29,7 @@
 
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">Ronald</div>
+    <div class="logo"><img src="./assets/OnePieceLogo.png" alt="One Piece Logo" /></div>
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
@@ -42,7 +42,7 @@
           <li><a href="AboutLuffy.html" onclick="toggleMenu()">Luffy</a></li>
           <li><a href="AboutCrew.html" onclick="toggleMenu()">Crew</a></li>
           <li><a href="AboutDevilsFruits.html" onclick="toggleMenu()">Devils Fruits</a></li>
-
+          <li><a href="MyJourney.html" onclick="toggleMenu()">MyJourney</a></li>
         </ul>
       </div>
     </div>
@@ -56,12 +56,12 @@
         legendary One Piece treasure!
       </p>
       <div class="profile-buttons">
-        <button class="btn btn-color-1">Meet Luffy</button>
-        <button class="btn btn-color-2">Meet the Crew</button>
+        <a href="AboutLuffy.html" class="btn btn-color-1">Meet Luffy</a>
+        <a href="AboutCrew.html" class="btn btn-color-2">Meet the Crew</a>
       </div>
     </div>
   </section>
-  <section id="Set Sail for Adventure">
+  <section id="set-sail-adventure">
     <p class="title"><span class="blue-text">Set Sail for</span> <span class="gold-text">Adventure!</span></p>
     <div class="adventure-container">
       <div class="adventure-card">
@@ -93,7 +93,7 @@
     </div>
   </section>
 
-  <section id="Me as a One Piece Character">
+  <section id="me-as-one-piece-character">
     <p class="title"><span class="blue-text">My Journey on the</span> <span class="gold-text">Grand Line</span></p>
     <div class="onepiece-container">
       <div class="onepiece-card">
@@ -101,7 +101,7 @@
           "Someday, I'll find my own One Piece, no matter how rough the seas get."
         </p>
         <div class="onepiece-button-container">
-          <button class="btn btn-color-1">Get to Know More</button>
+          <a href="MyJourney.html" class="btn btn-color-1">Get to Know More</a>
         </div>
       </div>
     </div>
