--- a/AboutDevilsFruits.html
+++ b/AboutDevilsFruits.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
 
-    <!-- Main Devil Fruits Section -->
+
     <section id="devil-fruits-hero">
         <div class="fruits-content">
             <div class="fruits-text">
@@ -62,7 +62,6 @@
             <img src="./assets/devil-fruits.png" alt="Devil Fruits Collection" class="hero-image" />
         </div>
     </section>
-    <!-- Devil Fruit Types Section -->
     <section id="fruit-types">
         <div class="types-content">
             <h2 class="section-title"><span class="blue-text">Types of</span> <span class="gold-text">Devil
@@ -96,12 +95,10 @@
         </div>
     </section>
 
-    <!-- Legendary Fruits Title -->
     <section id="legendary-fruits-title" style="min-height: auto; height: auto; padding-bottom: 0;">
         <h1 class="title"><span class="blue-text">Legendary</span> <span class="gold-text">Devil Fruits</span></h1>
     </section>
 
-    <!-- Mera Mera no Mi Section -->
     <section id="mera-mera-fruit">
         <div class="mera-content">
             <h2 class="section-title"><span class="gold-text">Mera Mera no Mi</span></h2>
@@ -127,7 +124,6 @@
         </div>
     </section>
 
-    <!-- Ope Ope no Mi Section -->
     <section id="ope-ope-fruit">
         <div class="ope-content">
             <h2 class="section-title"><span class="gold-text">Ope Ope no Mi</span></h2>
@@ -155,7 +151,56 @@
         </div>
     </section>
 
-    <!-- Footer -->
+
+    <section id="magu-magu-fruit">
+        <div class="magu-content">
+            <h2 class="section-title"><span class="gold-text">Magu Magu no Mi</span></h2>
+            <div class="magu-layout">
+                <div class="magu-image-container">
+                    <img src="./assets/MaguMagu.png" alt="Magu Magu no Mi - Magma-Magma Fruit" class="magu-image" />
+                </div>
+                <div class="magu-info">
+                    <h3 class="magu-subtitle">The Magma-Magma Fruit</h3>
+                    <p class="magu-text">
+                        The Magu Magu no Mi is a Logia-type Devil Fruit that allows the user to create, control, and
+                        transform into magma at will, turning the user into a Magma Human. It was eaten by Fleet Admiral
+                        Sakazuki (Akainu).
+                    </p>
+                    <p class="magu-text">
+                        <strong>Abilities:</strong> Overwhelming offensive power, ability to burn even fire, causing
+                        massive volcanic eruptions, flight via propulsion, and creating meteor-like magma fists.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <article id="artificial-fruits">
+        <div class="artificial-content">
+            <div class="artificial-layout">
+                <div class="artificial-text-container">
+                    <h1 class="title"><span class="blue-text">Artificial</span> <span class="gold-text">Fruits</span>
+                    </h1>
+                    <p class="artificial-description">
+                        Not all Devil Fruits are natural! "SMILEs" are Artificial Devil Fruits created by Caesar Clown
+                        and
+                        mass-produced by Doflamingo for Kaido's Beast Pirates. Unlike natural Zoan fruits, these
+                        synthetic
+                        versions carry a terrible risk.
+                    </p>
+                    <p class="artificial-description">
+                        Only 1 in 10 eaters gain powers, usually resulting in strange, permanent animal traits. The
+                        other 90%
+                        lose the ability to swim and fall victim to a side effect that forces them to smile and laugh
+                        for the
+                        rest of their lives, masking all negative emotions.
+                    </p>
+                </div>
+                <img src="./assets/SmileFuit.png" alt="Artificial Devil Fruits Collection" class="artificial-image" />
+            </div>
+        </div>
+    </article>
+
     <footer class="onepiece-footer">
         <div class="footer-container">
             <div class="footer-logo">
