--- a/MyJourney.html
+++ b/MyJourney.html
@@ -60,7 +60,9 @@
             </div>
             <div class="hero-image-section">
                 <img src="./assets/OceanPhoto.jpg" alt="Ocean Journey" class="hero-image" />
-                <p class="hero-personal-quote">"Someday, I'll find my own One Piece, no matter how rough the seas get."
+                <p class="hero-personal-quote">"Someday, I'll find my own One Piece, no matter how rough the seas
+                    get."<br>
+                    <span style="color: white;">- Ronald Sevilla</span>
                 </p>
             </div>
         </div>
@@ -169,8 +171,8 @@
             </div>
 
             <p class="footer-copy">
-                © 2025 Ronald • This is a fan-made website. One Piece is owned by Eiichiro Oda, Shueisha, and Toei
-                Animation.
+                © 2025 Ronald • This is a fan-made website. One Piece is<span class="break-mobile"><br></span> owned by
+                Eiichiro Oda, Shueisha, and Toei<span class="break-tablet"><br></span> Animation.
             </p>
         </div>
     </footer>
