--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
       <div class="footer-socials">
         <h3>Connect</h3>
         <div class="footer-socials-icons">
-          <a href="https://github.com/shironxiao" aria-label="GitHub">
+          <a href="https://github.com/shironxiao" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.facebook.com/shiron08/" aria-label="Facebook">
+          <a href="https://www.facebook.com/shiron08/" aria-label="Facebook" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.instagram.com/sh_i_ron" aria-label="Instagram">
+          <a href="https://www.instagram.com/sh_i_ron" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-instagram"></i>
           </a>
         </div>
