--- a/AboutCrew.html
+++ b/AboutCrew.html
@@ -203,21 +203,24 @@
             <div class="footer-socials">
                 <h3>Connect</h3>
                 <div class="footer-socials-icons">
-                    <a href="https://github.com/shironxiao" aria-label="GitHub">
+                    <a href="https://github.com/shironxiao" aria-label="GitHub" target="_blank"
+                        rel="noopener noreferrer">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.facebook.com/shiron08/" aria-label="Facebook">
+                    <a href="https://www.facebook.com/shiron08/" aria-label="Facebook" target="_blank"
+                        rel="noopener noreferrer">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="https://www.instagram.com/sh_i_ron" aria-label="Instagram">
+                    <a href="https://www.instagram.com/sh_i_ron" aria-label="Instagram" target="_blank"
+                        rel="noopener noreferrer">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
 
             <p class="footer-copy">
-                © 2025 Ronald • This is a fan-made website. One Piece is owned by Eiichiro Oda, Shueisha, and Toei
-                Animation.
+                © 2025 Ronald • This is a fan-made website. One Piece is<span class="break-mobile"><br></span> owned by
+                Eiichiro Oda, Shueisha, and Toei<span class="break-tablet"><br></span> Animation.
             </p>
         </div>
     </footer>
